14-laboratorio-troubleshooting/broken/06-memoria.yaml
apiVersion: v1
kind: Pod
metadata:
  name: procesador
  namespace: lab
spec:
  containers:
    - name: procesador
      image: busybox:1.36
      command: ["sh", "-c", "echo procesando; tail /dev/zero"]
      resources:
        requests:
          memory: 16Mi
        limits:
          memory: 32Mi
